feat: implement hash algorithms